Fixed sizing on small screens

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -3,16 +3,19 @@
 main {
     @extend .col;
     align-self: center;
+    box-sizing: border-box;
     padding: 2em 0;
     width: 64em;
 
     @media only screen and (max-width: $break-point-small) {
-        width: auto;
+        width: 100%;
     }
     @media only screen and (max-width: $break-point-medium) {
-        width: auto;
+        width: 100%;
+        padding: 2em 2em;
     }
     @media only screen and (max-width: $break-point-large) {
-        width: auto;
+        width: 100%;
+        padding: 2em 2em;
     }
 }
